Revision history for Data-Integer:

  [Documentation]
  - Updated maintainer information.

  - Reformatted Changes to conform to CPAN::Changes::Spec.

0.006    2017-08-07

  - no longer include a Makefile.PL in the distribution

  - in documentation, use four-column indentation for all verbatim
    material

  - in META.{yml,json}, point to public bug tracker

0.005    2015-03-29

  - avoid a spurious warning generated by new Perls starting with
    Perl 5.21.6

  - include META.json in distribution

  - convert .cvsignore to .gitignore

  - add MYMETA.json to .cvsignore

0.004    2010-07-26

  - in documentation of {s,u}int_msub(), correct description that said
    "addition" instead of "subtraction"

  - in synopsis, correct number of parameters for {s,u}int_mux()

  - use simpler "parent" pragma in place of "base"

  - in documentation, use the term "truth value" instead of the less
    precise "boolean"

  - check for required Perl version at runtime

  - use full stricture in test suite

  - use full stricture in Build.PL

  - in Build.PL, explicitly declare configure-time requirements

  - remove bogus "exit 0" from Build.PL

  - add MYMETA.yml to .cvsignore

0.003    2007-10-26

  - add natint_hex() and hex_natint() functions to output and input
    integer values in hexadecimal

  - add functions {n,s,u}int() to check and canonicalise native integer
    function arguments

  - add functions nint_is_{s,u}int() for classification of native integers

  - add functions {n,s,u}int_sgn(), {n,s,u}int_abs(), {n,s,u}int_cmp(),
    {n,s,u}int_min(), {n,s,u}int_max(), {n,s,u}int_neg(),
    {n,s,u}int_add(), {n,s,u}int_sub() for ordinary arithmetic on
    native integers

  - add functions {s,u}int_shl(), {s,u}int_shr(), {s,u}int_rol(),
    {s,u}int_ror() for bit shifts on native integers

  - add functions {n,u}int_bits_as_sint() and {n,s}int_bits_as_uint()
    for format conversions among native integers
