@@ -1,11 +1,11 @@
-.gitignore
-Build.PL
 Changes
+lib/Data/Integer.pm
+Makefile.PL
 MANIFEST
 META.json
 META.yml
 README
-lib/Data/Integer.pm
+SIGNATURE			Added here by Module::Build
 t/arith.t
 t/bitwise.t
 t/canon.t
@@ -16,4 +16,3 @@ t/marith.t
 t/pod_cvg.t
 t/pod_syn.t
 t/shift.t
-SIGNATURE    Added here by Module::Build
