@@ -14,10 +14,10 @@ unsigned.  Both are handled by this module.
 
 INSTALLATION
 
-	perl Build.PL
-	./Build
-	./Build test
-	./Build install
+	perl Makefile.PL
+	make
+	make test
+	make install
 
 AUTHOR
 
